samples/_failures_safe/1761259761_8d317a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49236ff0.c: In function ‘main’:
./samples/SAFE/__tmp_49236ff0.c:158:28: error: missing terminating " character
  158 |                     printf("\nMatrix A + B:\n
      |                            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_49236ff0.c:158:21: error: expected expression at end of input
  158 |                     printf("\nMatrix A + B:\n
      |                     ^~~~~~
./samples/SAFE/__tmp_49236ff0.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49236ff0.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49236ff0.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49236ff0.c:158:21: error: expected declaration or statement at end of input
